--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="head-logo" src="img/IMG_0230.JPG" style="height:300px;" alt="">
+                    <img class="head-logo" src="img/IMG_0281" style="height:300px;" alt="">
                     <div class="intro-text">
                         <span class="name">{{ site.title }}</span>
                         <hr class="star-light">
