--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p>I'm a M.S. Student in University of Chinese Academy of Sciences advised by Xiao Jun. My research interest includes computer graphics and computer vision.</p>
+                    <p>I'm a Third-year Phd Student in Emory University advised by Prof. Ashish Sharma. My research interest includes Biomedical image analysis, computer vision.</p>
                 </div>
               <div class="col-lg-8 col-lg-offset-2 text-center">
                 <a href="https://github.com/guoxiaoyuan" class="btn btn-lg btn-outline">
