--- a/_includes/about.html
+++ b/_includes/about.html
@@ -13,7 +13,7 @@
                 </div>
               <div class="col-lg-8 col-lg-offset-2 text-center">
                 <a href="https://github.com/guoxiaoyuan" class="btn btn-lg btn-outline">
-                  <i class="fa fa-download"></i>  Open Source Software</a>
+<!--                   <i class="fa fa-download"></i>  Open Source Software</a> -->
                 </div>
             </div>
         </div>
