--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,7 +12,7 @@
                     <p>I'm a Third-year Phd Student in Emory University advised by Prof. Ashish Sharma. My research interest includes Biomedical image analysis, computer vision.</p>
                 </div>
               <div class="col-lg-8 col-lg-offset-2 text-center">
-                <a href="https://github.com/guoxiaoyuan" class="btn btn-lg btn-outline">
+                <a href="https://github.com/XiaoyuanGuo" class="btn btn-lg btn-outline">
 <!--                   <i class="fa fa-download"></i>  Open Source Software</a> -->
                 </div>
             </div>
